@@ -91,7 +91,7 @@ deleteSQL = '''delete from MRK_Offset o
 	       where o.source = 0 
 	       and o.cmoffset >= -1
 	       and o._Marker_key = m._Marker_key
-	       and m._Marker_Status_key in (1,3)
+	       and m._Marker_Status_key = 1
 	       and lower(m.symbol) not like 'd%mit%'
 	       '''
 
