@@ -92,7 +92,7 @@ updateSQL = '''update MRK_Offset o
 	       and o.cmoffset < -1
 	       and o._Marker_key = m._Marker_key
 	       and m.chromosome not in ('UN')
-	       and m._Marker_Status_key in (1,3)
+	       and m._Marker_Status_key = 1
 	       '''
 
 #
@@ -201,7 +201,7 @@ def getMap():
 	      into temp markers
 	      from MRK_Marker m, ACC_Accession a
 	      where m._Organism_key = 1
-              and m._Marker_Status_key in (1,3)
+              and m._Marker_Status_key = 1
 	      and m.chromosome not in ('UN')
 	      and lower(m.symbol) not like 'd%mit%'
               and m._Marker_key = a._Object_key
