@@ -1,3 +1,10 @@
+TAG: genmapload-6-0-6-?
+DATE: 08/30/2016
+STAFF: lec
+CHANGES:
+TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
+ _Marker_Status_key in (1,3) changed to "= 1"
+
 TAG: genmapload-6-0-4-1
 DATE: 04/29/2016
 STAFF: lec
